# agent-replay

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_agent.py
src/agent_replay/: __init__.py  __main__.py  cli.py  diff.py  diff_html.py  exporters.py  otel.py  recorder.py  redact.py  replay.py  trace.py  viewer.py
src/agent_replay/integrations/: __init__.py  langchain.py
tests/: test_cli.py  test_cli_replay.py  test_cli_stats.py  test_diff.py  test_diff_html.py  test_edge_cases.py  test_exporters.py  test_langchain_integration.py  test_otel.py  test_play.py  test_recorder.py  test_recorder_extended.py  test_redact.py  test_replay.py  test_stats_search.py  test_trace.py  test_trace_filter.py  test_viewer.py
