[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-trace-replay"
version = "0.1.0"
description = "Record, replay, and debug AI agent execution traces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Manas Vardhan" }]
keywords = ["ai", "agents", "debugging", "tracing", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
agent-replay = "agent_replay.cli:cli"

[project.urls]
Homepage = "https://github.com/manasvardhan/agent-replay"
Repository = "https://github.com/manasvardhan/agent-replay"
Issues = "https://github.com/manasvardhan/agent-replay/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_replay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
